--- a/application.yml
+++ b/application.yml
@@ -1,12 +1,12 @@
-
-data:
-  mongodb:
-    authentication-database: myfamous-app
-    database: myfamous-app
-    host: myfamous.com
-    port: 27017
-    username: myfamous
-    password: myfamous@123
+spring:
+    data:
+      mongodb:
+        authentication-database: myfamous-app
+        database: myfamous-app
+        host: myfamous.com
+        port: 27017
+        username: myfamous
+        password: myfamous@123
         
 eureka:
   instance:
