--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ spring:
       mongodb:
         authentication-database: myfamous-app
         database: myfamous-app
-        host: myfamous.com
+        host: localhost
         port: 27017
         username: myfamous
         password: myfamous@123
