--- a/application.yml
+++ b/application.yml
@@ -1,12 +1,7 @@
 spring:
- data:
-   mongodb:
-    authentication-database: myfamous-app
-    database: myfamous-app
-    host: myfamous.com
-    port: 27017
-    username: myfamous
-    password: myfamous@123
+  profiles:
+    active:
+      - dev
         
 eureka:
   instance:
