--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,10 @@
+spring:
+  data:
+   mongodb:
+     authentication-database: myfamous-app
+     database: myfamous-app
+     host: myfamous.com
+     port: 27017
+     username: myfamous
+     password: myfamous@123
 
